<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottomNavHeight"
    android:orientation="horizontal"
    android:background="?android:attr/windowBackground"
    android:paddingTop="18dp"
    android:paddingBottom="18dp"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/navigation_home"
        style="?attr/actionBarItemBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="@dimen/bottomNavIconSize"
            android:layout_height="@dimen/bottomNavIconSize"
            android:src="@drawable/icon_home"/>

        <TextView
            android:id="@+id/text_home"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/bottomNavTextSize"
            android:textStyle="bold"
            android:textColor="@color/menu_text_default_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_control"
        style="?attr/actionBarItemBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:clickable="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_control"
            android:layout_width="@dimen/bottomNavIconSize"
            android:layout_height="@dimen/bottomNavIconSize"
            android:src="@drawable/menu_icon_selector_control"/>

        <TextView
            android:id="@+id/text_control"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bottomNavTextSize"
            android:textStyle="bold"
            android:textColor="@color/menu_text_default_color"
            android:text="@string/title_control" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_setting"
        style="?attr/actionBarItemBackground"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/icon_setting"
            android:layout_width="@dimen/bottomNavIconSize"
            android:layout_height="@dimen/bottomNavIconSize"
            android:src="@drawable/menu_icon_selector_setting" />

        <TextView
            android:id="@+id/text_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/bottomNavTextSize"
            android:textStyle="bold"
            android:textColor="@color/menu_text_default_color"
            android:text="@string/title_setting"/>
    </LinearLayout>
</LinearLayout>
